feat(grpc-redis): implementation of send email
