# db/sqlc/models.go
@@ -1,6 +1,6 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.29.0
+//   sqlc v1.30.0
 
 package db
 
@@ -47,6 +47,17 @@ type User struct {
 	HashedPassword    string
 	FullName          string
 	Email             string
+	IsEmailVerified   bool
 	PasswordChangedAt pgtype.Timestamptz
 	CreatedAt         pgtype.Timestamptz
+}
+
+type VerifyEmail struct {
+	ID         int64
+	Username   string
+	Email      string
+	SecretCode string
+	IsUsed     bool
+	CreatedAt  pgtype.Timestamptz
+	ExpiresAt  pgtype.Timestamptz
 }
